feat(security): restrict access to product endpoints for SUPPLIER role